--- a/app/src/main/res/layout/activity_monumento.xml
+++ b/app/src/main/res/layout/activity_monumento.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:id = "@+id/monumento"
-    android:background="#e67300"
+    android:background="#b3ecff"
     tools:context=".MonumentoActivity">
 
     <TextView
